tests/negative/Internal/LazyBuiltin.juvix
module LazyBuiltin;

builtin bool
type Bool :=
  | false : Bool
  | true : Bool;
open Bool;

builtin bool-if
ite : {A : Type} -> Bool -> A -> A -> A
  | true x _ := x
  | false _ x := x;

f : Bool -> Bool
  | x := ite x;
